<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-2024 The Evolution X Project
                   2016-2022 crDroid Android Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- PixelParts -->
    <string name="pixel_parts_title">Pixel Parts</string>
    <string name="kernel_node_access_error">Kernel node access failed! Please ensure the provided path to the sysfs or procfs attribute is accurate, that it has appropriate permissions, and the SELinux policies are properly configured.</string>
    <string name="kernel_node_returned_value_unknown">No string resource found for the value returned by the node.</string>
    <string name="tile_add">Add tile</string>
    <string name="tile_added">Tile added</string>
    <string name="tile_not_added">Tile not added</string>
    <string name="tile_already_added">Tile already added</string>
    <string name="tile_on">On</string>
    <string name="tile_off">Off</string>
    <string name="tile_camera_in_use">Camera in use</string>

    <!-- Pixel torch -->
    <string name="pixel_torch_title">Pixel torch</string>
    <string name="pixel_torch_summary">A configurable flashlight tile and volume button service</string>
    <string name="pixel_torch_cycle_modes_title">Cycle modes</string>
    <string name="pixel_torch_cycle_modes_summary">Cycle between predefined strength levels</string>
    <string name="pixel_torch_state">State: %d</string>
    <string name="pixel_torch_first_click_title">First click</string>
    <string name="pixel_torch_second_click_title">Second click</string>
    <string name="pixel_torch_third_click_title">Third click</string>
    <string name="pixel_torch_button_service_title">Volume button service</string>
    <string name="pixel_torch_button_service_summary">Toggle Pixel torch when pressing both volume buttons simultaneously</string>
    <string name="pixel_torch_button_service_description">This accessibility service listens to key events, specifically volume up and down buttons, to toggle Pixel torch. This service does not collect any data from your device.\n\nEnabling the \"Hold Volume Key\" shortcut on this page will override the key event, causing the service to not work.\n\nThis service will not work when the screen is off while audio is playing (regardless of the output device).</string>

    <!-- Auto hbm -->
    <string name="auto_hbm_title">Automatic HBM</string>
    <string name="auto_hbm_main_switch_title">Use automatic HBM</string>
    <string name="auto_hbm_summary">Automatically enable high brightness mode based on sunlight intensity (lux)</string>
    <string name="auto_hbm_threshold_title">Light threshold</string>
    <string name="auto_hbm_threshold_summary">Define the light intensity threshold in lux units at which HBM is activated</string>
    <string name="auto_hbm_enable_time_title">Enable time</string>
    <string name="auto_hbm_enable_time_summary">Duration in seconds that the light threshold must be continuously met to activate HBM</string>
    <string name="auto_hbm_disable_time_title">Disable time</string>
    <string name="auto_hbm_disable_time_summary">Duration in seconds for which HBM is deactivated if the light threshold falls below the set level</string>

    <!-- Saturation -->
    <string name="saturation_title">Saturation</string>
    <string name="saturation_summary">Control the saturation level of the display</string>
    <string name="saturation_footer_summary">Changing the color mode in display settings will override the saturation level, requiring it to be reapplied.</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Image preview -->
    <string name="image_preview_content_description">Preview</string>
    <string name="image_preview_next_page_content_description">Next</string>
    <string name="image_preview_previous_page_content_description">Previous</string>
</resources>
